--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,6 @@
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
     <string name="title_activity_kekka">kekka</string>
+    <string name="title_activity_result">Result</string>
+    <string name="title_activity_ranking">ranking</string>
 </resources>
